--- a/Concurrent/Concurrent.csproj
+++ b/Concurrent/Concurrent.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Await.cs" />
+    <Compile Include="MyMutex.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
